--- a/index.html
+++ b/index.html
@@ -1,33 +1,31 @@
-<!DOCTYPE html>
-<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <title>Quiz Example</title>
-  <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,900,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css'>
-  <link href="http://fonts.googleapis.com/css?family=Lato:300,400" rel="stylesheet" type="text/css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="sweet-alert.css">
-  <link rel="stylesheet" href="quiz.css">
-  <style>
-    #quiz {
-      height: 600px;
-      display: block;
-    }
-  </style>
-</head>
-<body>
-  <div class="container-fluid">
-    <div id="quiz"></div>
+    <link rel="stylesheet" type="text/css" href="index.css">
+    </head>
+
+<div> class="fade"></div>
+
+<section class="star-wars">
+
+  <div class="crawl">
+
+    <div class="title">
+      <p>DRAGI COLEGI</p>
+    </div>
+    
+    <p>Încep prin a vă mulţumii pentru rabdarea şi suportul oferit în cei 3 ani petrecuţi aici.
+        
+       </p>      
+    <p>Sunt foarte recunoscător pentru timpul petrecut în echipa BCR. Am învăţat o mulţime de lucruri noi şi am avut ocazia să cunosc o multitudine de oameni. Sunteţi o echipă extrem de talentată şi mă bucur mult că v-am cunoscut.</p>
+    <p>Chiar dacă mai devreme sau mai târziu fiecare alege să meargă pe o altă cale, eu sper să pastrăm legătura şi să ne auzim cât mai curând.
+        Adresa mea de email este: ciprianandrei.cosarca@gmail.com</p>
+  
+    <center><p>MULT SUCCES TUTUROR!</p></center>
+ 
+    <center><p>Ciprian</p></center>
+  
+    </br>
+
+
   </div>
-  <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-  <script src="sweet-alert.js"></script>
-  <script src="quiz.js"></script>
-  <script>
-    $(function() {
-      $('#quiz').quiz("unicorns.json");
-    });
-  </script>
-</body>
-</html>
+
+</section>
